# forum

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  RUNNING.md  SECURITY.md  USAGE.md  forum.interop.json  forum.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ENTERPRISE-READINESS.md  GATE-DEADLINES.md  INTRODUCTION.md
docs/brand/: README.md
docs/superpowers/plans/: 2026-07-02-forum-communication-contract.md  2026-07-02-forum-context-capsules.md  2026-07-02-forum-context-preflight.md  2026-07-02-forum-context-pressure.md  2026-07-02-forum-done-criteria.md  2026-07-02-forum-expert-delivery-profiles.md  2026-07-02-forum-frame-guided-synthesis.md  2026-07-02-forum-human-routing-intelligence.md  2026-07-02-forum-route-framed-delivery.md  2026-07-02-forum-run-room-brief.md  (+10 more)
examples/: demo.py  flagship_campaign.json  forum-demo.html  run.py  run_batched_fsync.py  run_campaign.py  run_context_capsule.py  run_context_pressure.py  run_contract.py  run_daemon.py  run_data_flow.py  run_delivery.py  run_delivery_profile.py  run_durable.py  run_efficiency.py  run_escalation.py  run_intent.py  run_intent_judge.py  run_mcp.py  run_real.py  run_request.py  run_resume.py  run_summary.py  run_task_context.py  run_verification.py
forum/: __init__.py
src/forum/: __init__.py  __main__.py  actor.py  api_executor.py  bench_deep_verify.py  budget.py  campaign.py  campaign_dispatch.py  campaign_ingest.py  campaign_room.py  campaign_status.py  chat_executor.py  cli.py  command_split.py  communication_contract.py  context.py  context_budget.py  context_capsule.py  context_preflight.py  control.py  daemon.py  delivery.py  delivery_profile.py  dispatch.py  engine.py  executor.py  flagship.py  flight_recorder.py  gates.py  gradable_export.py  grade.py  hashing.py  http_surface.py  humanize.py  intent.py  lane_gaps.py  lanes.py  ledger.py  llm.py  mcp_surface.py  (+18 more)
tests/: test_actor.py  test_api_executor.py  test_bench_deep_verify.py  test_browser_workflow_routes.py  test_budget.py  test_campaign.py  test_campaign_dispatch.py  test_campaign_ingest.py  test_campaign_room.py  test_campaign_status.py  test_chat_executor.py  test_classifier.py  test_cli.py  test_cli_campaign.py  test_cli_gate.py  test_command_split.py  test_communication_contract.py  test_context.py  test_context_budget.py  test_context_capsule.py  test_context_preflight.py  test_coordinator.py  test_daemon.py  test_delivery.py  test_delivery_profile.py  test_dispatch.py  test_dispatch_gate_pause.py  test_dispatch_gate_reject.py  test_dispatch_gate_resume.py  test_engine.py  test_engine_gate.py  test_escalation.py  test_executor.py  test_flagship_cli.py  test_flight_recorder.py  test_gate_deadline.py  test_gates.py  test_gates_resolve.py  test_gradable_export.py  test_grade.py  (+41 more)
(+21 files in other folders)
