[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forum-engine"
version = "1.11.0"
description = "An orchestration engine for AI agents that records every step in a ledger you can verify"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["agents", "orchestration", "ledger", "accountability", "multi-agent", "audit", "zero-dependency"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
forum = "forum.cli:main"

[project.urls]
Homepage = "https://github.com/HarperZ9/forum"
Repository = "https://github.com/HarperZ9/forum"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
forum = ["manifests/*.toml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.11"
files = ["src/forum"]
